# game01

./: .gitignore  README.md  deploy.sh
.github/workflows/: ci.yml
0.documents/: 0.instructions.txt  PRD.md  SUMMARY-STEP0.md  plan.md  research.md
client/: index.html  package-lock.json  package.json  vitest.config.ts
client/public/: manifest.json  style.css  sw.js
client/public/fonts/: fonts.css
client/src/: main.ts
client/src/__tests__/: ComboManager.test.ts  Constants.test.ts  DiaryData.test.ts  DifficultyManager.test.ts  GameLogic.test.ts  InventoryManager.test.ts  MissionLogic.test.ts  OnsenLogic.test.ts  PerspectiveCamera.test.ts  QuestManager.test.ts  RewardedAdManager.test.ts  RoadRendererLUT.test.ts  SoundManager.test.ts  UIFactory.test.ts
client/vite/: config.dev.mjs  config.prod.mjs
deploy/: backup-db.sh  capybara-api.service  nginx-capybara-ssl.conf  nginx-capybara.conf  nginx-security-headers.conf
docs/plans/: 2026-03-06-journey-diary-design.md  2026-03-07-comprehensive-improvement-design.md
server/: .env.example  Cargo.toml
server/migrations/: 001_init.sql  002_inventory_onsen.sql  003_daily_missions.sql  004_streak_last_reward_date.sql  005_mission_updated_at.sql  006_companions.sql  007_constraints_indexes.sql  008_gem_currency.sql
server/src/: config.rs  db.rs  error.rs  main.rs
server/src/models/: companions.rs  inventory.rs  missions.rs  mod.rs  score.rs  user.rs
server/src/routes/: companions.rs  health.rs  inventory.rs  missions.rs  mod.rs  scores.rs  telemetry.rs  users.rs
server/tests/: integration_test.rs
(+54 files in other folders)
